@@ -18,7 +18,7 @@
 #  limitations under the License.
 
 bin_SCRIPTS = tsxs
-bin_PROGRAMS = 
+bin_PROGRAMS =
 
 AM_CPPFLAGS = $(iocore_include_dirs) \
   -I$(top_srcdir)/lib -I$(top_builddir)/lib \
@@ -27,10 +27,7 @@ AM_CPPFLAGS = $(iocore_include_dirs) \
 noinst_PROGRAMS = jtest/jtest
 
 jtest_jtest_SOURCES = jtest/jtest.cc
-jtest_jtest_LDADD = $(top_builddir)/lib/ts/libtsutil.la \
-    @LIBTOOL_LINK_FLAGS@ \
-    @LIBSOCKET@ @LIBNSL@ \
-    @LIBRT@ @LIBDL@
+jtest_jtest_LDADD = $(top_builddir)/lib/ts/libtsutil.la
 
 
 if BUILD_HTTP_LOAD
